--- a/honeypeartea/templates/rijksmuseum.html
+++ b/honeypeartea/templates/rijksmuseum.html
@@ -60,7 +60,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#subscribe">CONTACTS</a>
+          <a class="nav-link" href="#subscribe">FEEDBACK</a>
         </li>
       </ul>
     </div>
@@ -395,10 +395,10 @@
       <div class="container">
         <ul class="list-unstyled list-inline text-center py-2">
           <li class="list-inline-item">
-            <h5 class="mb-1">Subscribe to our newsletter</h5>
+            <h5 class="mb-1">Please leave your feedback</h5>
           </li>
           <li class="list-inline-item" id="footer-button">
-            <a href="#registerModal" data-toggle="modal" class="btn btn-outline-white">Subscribe!</a>
+            <a href="#registerModal" data-toggle="modal" class="btn btn-outline-white">Feedback!</a>
           </li>
         </ul>
       </div>
@@ -411,7 +411,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="mx-auto font-weight-bold">Subscribe to our newsletter</h5>
+            <h5 class="mx-auto font-weight-bold">Please leave your feedback</h5>
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
           </div>
           <div class="modal-body">
@@ -422,7 +422,7 @@
                     <div class="col">
                       <div class="md-form">
                         <input type="text" id="name" class="form-control" required>
-                        <label for="materialRegisterFormFirstName">Name</label>
+                        <label for="materialRegisterFormFirstName">Feedback</label>
                       </div>
                     </div>
                   </div>
